[gd_scene load_steps=37 format=2]

[ext_resource path="res://src/scenes/Mapa entero/Level 2.gd" type="Script" id=1]
[ext_resource path="res://src/Collisions/ColMidUpper.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Sala Ventana/Sala Ventana.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Sala 2/habitacion_izquierda_2.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/Sala 2/HabitacioCentral2.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Sala 2/HabitacionDerecha_2.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Collisions/ColRight.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Collisions/ColLeft.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/actors/Enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Spawners/ChildSpawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/AssetsFinals/Props/jaula.png" type="Texture" id=11]
[ext_resource path="res://src/dialeg/Dialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/portals/portal.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/AssetsFinals/Props/Escalera.png" type="Texture" id=14]
[ext_resource path="res://assets/AssetsFinals/Props/EscaleraArriba.png" type="Texture" id=15]
[ext_resource path="res://src/dialeg/MultiDialog.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Lights/lightFlicker.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/AssetsFinals/Props/WC.png" type="Texture" id=18]
[ext_resource path="res://assets/AssetsFinals/Props/cadena.png" type="Texture" id=19]
[ext_resource path="res://assets/AssetsFinals/Props/grietas/grieta 4.png" type="Texture" id=20]
[ext_resource path="res://assets/AssetsFinals/Props/esquelet.png" type="Texture" id=21]
[ext_resource path="res://assets/AssetsFinals/Props/grietas/grieta 5.png" type="Texture" id=22]
[ext_resource path="res://assets/AssetsFinals/Props/elemento tubo.png" type="Texture" id=23]
[ext_resource path="res://assets/AssetsFinals/Props/mocho.png" type="Texture" id=24]
[ext_resource path="res://assets/AssetsFinals/Props/grietas/grieta 2.png" type="Texture" id=25]
[ext_resource path="res://assets/AssetsFinals/Props/grietas/grieta 3.png" type="Texture" id=26]
[ext_resource path="res://assets/AssetsFinals/Props/Silla.png" type="Texture" id=27]
[ext_resource path="res://src/terminal/TerminalTheme.tres" type="Theme" id=28]
[ext_resource path="res://assets/AssetsFinals/Sonido/BeepBox-Song_8_mp3cut.net.wav" type="AudioStream" id=29]
[ext_resource path="res://src/PickUps/BarreraRoja.tscn" type="PackedScene" id=30]
[ext_resource path="res://assets/light/RedondaLuz.png" type="Texture" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 290.966, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.85669, 17.739 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Level 2" type="Node2D"]
position = Vector2( 0, -1152 )
script = ExtResource( 1 )

[node name="Middle" parent="." instance=ExtResource( 5 )]
z_index = -300

[node name="Password" parent="Middle/TerminalCompleta" index="2"]
solution = "7554"

[node name="Right" parent="." instance=ExtResource( 6 )]
position = Vector2( 1024, 0 )
z_index = -300

[node name="Level_dreta_2" parent="Right" index="0"]
position = Vector2( 512, 288 )

[node name="Left" parent="." instance=ExtResource( 4 )]
position = Vector2( -1024, 0 )
z_index = -300

[node name="Level_Esquerra_2" parent="Left" index="0"]
position = Vector2( 512, 288 )

[node name="Sala Ventana" parent="." instance=ExtResource( 3 )]
position = Vector2( 1024, 576 )
z_index = -300

[node name="Sala amagada" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( 1542.16, 589.903 )
scale = Vector2( 1, 4.08001 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( 1433.63, 707.935 )
scale = Vector2( 0.679995, 7.80001 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( 1172.56, 815.836 )
scale = Vector2( -0.655294, 29.377 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( 1898.45, 862.999 )
scale = Vector2( -0.655294, 29.377 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( 1506.8, 1148.03 )
scale = Vector2( -0.855294, 12.817 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( 1866.25, 300.016 )
rotation = 0.790061
scale = Vector2( -0.797942, 12.4994 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( -819.368, 288.294 )
rotation = 2.34933
scale = Vector2( -0.797942, 12.4994 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( -638.488, 371.198 )
rotation = 3.14022
scale = Vector2( -0.44877, 1.32579 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Sala amagada"]
position = Vector2( -426.64, 284.231 )
rotation = 5.47156
scale = Vector2( -0.44877, 1.32579 )
shape = SubResource( 1 )

[node name="ColLeft" parent="." instance=ExtResource( 8 )]

[node name="ColMid" parent="." instance=ExtResource( 2 )]

[node name="ColRight" parent="." instance=ExtResource( 7 )]

[node name="Base" type="Node2D" parent="."]
position = Vector2( 852.25, 723.075 )

[node name="Enemy" parent="." instance=ExtResource( 9 )]
position = Vector2( 852.25, 723.075 )

[node name="TerminalTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Spawn1" parent="." instance=ExtResource( 10 )]
position = Vector2( -554.782, 366.084 )

[node name="Spawn2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1542.04, 888.478 )

[node name="Props" type="Node" parent="."]

[node name="grieta 5" type="Sprite" parent="Props"]
position = Vector2( -759.678, -909.137 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 22 )

[node name="grieta 4" type="Sprite" parent="Props"]
position = Vector2( 1344.89, -1118.26 )
rotation = -3.14159
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 20 )

[node name="esquelet" type="Sprite" parent="Props"]
position = Vector2( -530.324, -875.404 )
scale = Vector2( 2, 2 )
z_index = -10
texture = ExtResource( 21 )

[node name="jaula" type="Sprite" parent="Props"]
position = Vector2( -511.831, -864.537 )
scale = Vector2( 4, 4 )
z_index = -10
z_as_relative = false
texture = ExtResource( 11 )

[node name="Escalera" type="Sprite" parent="Props"]
position = Vector2( 1666.95, -817.446 )
scale = Vector2( 4, 4 )
z_index = -10
z_as_relative = false
texture = ExtResource( 14 )

[node name="EscaleraArriba" type="Sprite" parent="Props"]
position = Vector2( 1674.7, -447.095 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 15 )

[node name="WC" type="Sprite" parent="Props"]
position = Vector2( 1413.97, -358.155 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 18 )

[node name="cadena" type="Sprite" parent="Props"]
position = Vector2( 1438.35, -490.462 )
scale = Vector2( 2, 4 )
z_index = -10
texture = ExtResource( 19 )

[node name="elemento tubo" type="Sprite" parent="Props"]
position = Vector2( 313.025, -1046.41 )
scale = Vector2( 4, 7.35049 )
z_index = -10
texture = ExtResource( 23 )

[node name="elemento tubo2" type="Sprite" parent="Props"]
position = Vector2( 716.038, -1046.41 )
scale = Vector2( 4, 7.35049 )
z_index = -10
texture = ExtResource( 23 )

[node name="Silla" type="Sprite" parent="Props"]
position = Vector2( 585.492, -932.987 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 27 )

[node name="mocho" type="Sprite" parent="Props"]
position = Vector2( 272.317, -991.6 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 24 )

[node name="grieta 2" type="Sprite" parent="Props"]
position = Vector2( 707.211, -919.427 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 25 )

[node name="grieta 3" type="Sprite" parent="Props"]
position = Vector2( 102.061, -919.427 )
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 26 )

[node name="Portal1" parent="." instance=ExtResource( 13 )]

[node name="CollisionShape2D" parent="Portal1" index="0"]
position = Vector2( 1673.62, 359.056 )
rotation = -0.00559
scale = Vector2( 5.35246, 1.45446 )
shape = SubResource( 2 )

[node name="finalTp" parent="Portal1" index="2"]
position = Vector2( 1666.16, 793.627 )

[node name="Portal2" parent="." instance=ExtResource( 13 )]

[node name="CollisionShape2D" parent="Portal2" index="0"]
position = Vector2( 1669.42, 654.11 )
scale = Vector2( 3.6, 0.719999 )

[node name="finalTp" parent="Portal2" index="2"]
position = Vector2( 1651.83, 207.322 )

[node name="DarknessOn" parent="." instance=ExtResource( 17 )]

[node name="interactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -1.43188 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 507.7, 428.668 )
scale = Vector2( 20.3623, 3.71495 )
shape = SubResource( 3 )

[node name="LightTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TurnOnPlayerLight" type="Area2D" parent="."]
monitoring = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnOnPlayerLight"]
position = Vector2( 514.693, 519.109 )
scale = Vector2( 13.04, 1 )
shape = SubResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 58.0
margin_bottom = 39.0
theme = ExtResource( 28 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 1492.97
margin_top = 672.817
margin_right = 1540.97
margin_bottom = 702.817
rect_scale = Vector2( 1.88, 1.52 )
text = "7554"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarreraRoja" parent="." instance=ExtResource( 30 )]
position = Vector2( 502.662, 237.35 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 474.465, 59.1748 )
scale = Vector2( 0.12, -0.0799902 )
texture = ExtResource( 31 )
color = Color( 0.360784, 1, 0, 1 )
energy = 0.7

[node name="Dialogs" type="Node2D" parent="."]
z_index = 1000
z_as_relative = false

[node name="Dialog2" parent="Dialogs" instance=ExtResource( 12 )]
visible = false
margin_left = 1202.41
margin_top = 994.809
margin_right = 1202.41
margin_bottom = 994.809
text = [ "I would give you this key if you won a match of pong against me", "but since my programmer doesn't know how to program a pong", "take the key and leave me alone" ]

[node name="Dialog1" parent="Dialogs" instance=ExtResource( 16 )]
visible = false
margin_left = -752.06
margin_top = 420.335
margin_right = -752.06
margin_bottom = 420.335
pregunta = "Can you open the cage please?"
ans1 = "Okay, I guess..."
ans2 = "Nope jaja"
childResponse1 = "Thank you! :)"
childResponse2 = "I hope really bad things happen to you >:("
childResponseLied = "What are you waiting for?"
[connection signal="enter_terminal" from="Middle/TerminalCompleta" to="." method="_on_TerminalCompleta_enter_terminal"]
[connection signal="exit_terminal" from="Middle/TerminalCompleta" to="." method="_on_TerminalCompleta_exit_terminal"]
[connection signal="solved" from="Middle/TerminalCompleta/Terminal" to="." method="_on_Terminal_solved"]
[connection signal="timeout" from="TerminalTimer" to="." method="_on_TerminalTimer_timeout"]
[connection signal="teleportPlayer" from="Portal1" to="." method="_on_Portal1_teleportPlayer"]
[connection signal="teleportPlayer" from="Portal2" to="." method="_on_Portal2_teleportPlayer"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="LightTimer" to="." method="_on_LightTimer_timeout"]
[connection signal="area_entered" from="TurnOnPlayerLight" to="." method="_on_TurnOnPlayerLight_area_entered"]
[connection signal="finished" from="Dialogs/Dialog2" to="." method="_on_Dialog2_finished"]
[connection signal="answer" from="Dialogs/Dialog1" to="." method="_on_Dialog1_answer"]

[editable path="Middle"]

[editable path="Middle/TerminalCompleta"]

[editable path="Right"]

[editable path="Left"]

[editable path="ColLeft"]

[editable path="Portal1"]

[editable path="Portal2"]
